Overflow problem fixed

--- a/assets/styles/sign-types.css
+++ b/assets/styles/sign-types.css
@@ -22,7 +22,7 @@
 .poster {
   background: white;
   position: relative;
-  overflow: hidden;
+  overflow: visible;
 }
 
 
